email address from bcsc only

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -141,7 +141,7 @@ information and to verify that the information provided by you is accurate.
                 placeholder="Email Address"
                 autocomplete="new-password"
                 required
-                [readonly]="contactFormControl.confirmEmail.value"
+                readonly="true"
               />
               <mat-error
                 *ngIf="
