--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -13,7 +13,7 @@
                 <b>Full-time Occupants<span style="color:red" >*</span></b>
               </p>
               <p>
-                Add the name of all full-time occupants who lived in your home at the time of the event. Don't include tenants. If you were the only occupant living at the residence, please fill in your own name.<span style="color:red" >*</span>
+                Add yourself and the name(s) of all full-time occupants who lived in your home at the time of the event. Don't include tenants.<span style="color:red" >*</span>
               </p>
 
               <table mat-table [dataSource]="fullTimeOccupantsDataSource" *ngIf="fullTimeOccupantsDataSource.getValue().length > 0">
