--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -581,7 +581,7 @@
             }}
           </div>
         </div>
-        <div class="row info-detail" *ngIf="!isResidentialTenant">
+        <div class="row info-detail" *ngIf="isHomeowner">
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.eligibleForHomeOwnerGrant}">Eligible for a BC Home Owner Grant for this Property:</span></div>
           <div class="col-md-3">
             <span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.eligibleForHomeOwnerGrant}">{{
