--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -124,7 +124,7 @@
       </div>
     </ng-container>
 
-    <ng-container *ngIf="!isResidentialTenant">
+    <ng-container *ngIf="isHomeowner || isSmallBusinessOwner">
       <div class="row">
         <div class="col-md-8">
           <app-dfa-attachment
