--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -20,9 +20,9 @@
                   <mat-radio-button
                     class="primary-radio-button row"
                     [value]="option.key"
-                    *ngIf="option.value === radioApplicantOptions.Homeowner || option.value === radioApplicantOptions.ResidentialTenant"
-                  >
-                    {{ option.value }}
+                    *ngIf="option.value === radioApplicantOptions.Homeowner || option.value === radioApplicantOptions.ResidentialTenant || option.value === radioApplicantOptions.SmallBusinessOwner"
+                  ><span *ngIf="option.value === radioApplicantOptions.SmallBusinessOwner">{{ option.value }} (landlords included)</span>
+                   <span *ngIf="option.value !== radioApplicantOptions.SmallBusinessOwner"> {{ option.value }}</span>
                   </mat-radio-button><br />
                   <div class="row">
                     <div class="sub-heading radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.Homeowner">
@@ -54,7 +54,7 @@
                         <li>a piece of mail addressed to you at the damaged property address which shows that you lived in the residence at the time of the event, such as a BC Hydro bill, utility bill, bank statement, or vehicle insurance.</li>
                       </ul>
                     </div>
-                    <!-- <div class="radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
+                    <div class="radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
                       <br/>
                       <mat-label class="sub-heading">What type of small business?<span style="color:red" >*</span></mat-label>
                       <br />
@@ -73,57 +73,58 @@
                             <br/>
                             Your business must:
                             <ul>
-                              <li>Be managed by the owner on a day-to-day basis</li>
-                              <li>Have gross sales less than $2 million per year</li>
-                              <li>Must have at least $10,000 per year in revenue from the business</li>
-                              <li>Employ fewer than 50 employees at one time</li>
+                              <li>be managed by the owner on a day-to-day basis,</li>
+                              <li>have grossed at least $10,000 but less than $2 million in revenue in the year immediately preceding the disaster,</li>
+                              <li>employ fewer than 50 employees at one time, and</li>
+                              <li>demonstrate that, without the claimed assistance, the future of the business could be placed in financial jeopardy. Financial jeopardy is defined as when the assistance payment to repair the damage would exceed 10 percent of the net income of the business.</li>
                             </ul><br/>
-                            As a General or Sole Proprietorship, you must to provide the following with your application:
+                            As a General or Sole Proprietorship or DBA name, you must provide the following with your application:
                             <ul>
-                              <li>Completed <a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Small Business Insurance Template</a> (by insurance broker).</li>
-                              <li>completed T1 general tax return with supporting schedules for all owners.</li>
+                              <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Small Business Insurance Template</a> completed by your insurance broker,</li>
+                              <li>completed T1 general income tax return with supporting schedules for all owners, and</li>
+                              <li>the most recently filed financial statements (income statement and balance sheet) used for income tax purposes.</li>
                             </ul><br/>
                             You <i>may</i> be required to provide the following, if applicable:
                             <ul>
-                              <li>Lease Agreements</li>
+                              <li>lease agreements</li>
                             </ul>
                           </div>
                           <div class="sub-heading radio-extra-label" *ngIf="appTypeInsuranceForm.get('smallBusinessOption').value === sbOption.key && sbOption.value === radioSmallBusinessOptions.Corporate">
                             <br/>
                             Your business must:
                             <ul>
-                              <li>Be managed by the owner on a day-to-day basis</li>
-                              <li>Must have at least $10,000 per year in revenue from the business</li>
-                              <li>Have gross sales less than $2 million per year</li>
-                              <li>Employ fewer than 50 employees at one time</li>
+                              <li>be managed by the owner on a day-to-day basis,</li>
+                              <li>have grossed at least $10,000 but less than $2 million in revenue in the year immediately preceding the disaster,</li>
+                              <li>employ fewer than 50 employees at one time, and</li>
+                              <li>demonstrate that, without the claimed assistance, the future of the business could be placed in financial jeopardy. Financial jeopardy is defined as when the assistance payment to repair the damage would exceed 10 percent of the net income of the business.</li>
                             </ul><br/>
-                            As a Corporate (Ltd./Inc.) Company, you must to provide the following with your application:
+                            As a Corporate Company (Ltd./Inc.), you must provide the following with your application:
                             <ul>
-                              <li>Completed <a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Small Business Insurance Template</a> (by insurance broker).</li>
-                              <li>Central security register</li>
-                              <li>Completed T2 return for the company</li>
-                              <li>Company income statement and balance sheet used for income tax purposes</li>
+                              <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_farm_small_business_charitable_organization-insurance_template.pdf" target="_blank">Small Business Insurance Template</a> completed by your insurance broker,</li>
+                              <li>completed T2 corporate income tax return for the company,</li>
+                              <li>proof of ownership (Central Securities Register listing all shareholders or Partnership Agreement), and </li>
+                              <li>company income statement and balance sheet used for income tax purposes.</li>
                             </ul><br/>
                             You <i>may</i> be required to provide the following, if applicable:
                             <ul>
-                              <li>Lease Agreements</li>
+                              <li>lease agreements</li>
                             </ul>
                           </div>
                           <div class="sub-heading radio-extra-label" *ngIf="appTypeInsuranceForm.get('smallBusinessOption').value === sbOption.key && sbOption.value === radioSmallBusinessOptions.Landlord">
                             <br/>
                             Your business must:
                             <ul>
-                              <li>Be managed by the owner on a day-to-day basis</li>
-                              <li>Must have at least $10,000 per year in revenue from the business</li>
-                              <li>Have gross sales less than $2 million per year</li>
-                              <li>Employ fewer than 50 employees at one time</li>
+                              <li>be managed by the owner on a day-to-day basis,</li>
+                              <li>have grossed at least $10,000 but less than $2 million in revenue in the year immediately preceding the disaster,</li>
+                              <li>employ fewer than 50 employees at one time, and</li>
+                              <li>demonstrate that, without the claimed assistance, the future of the business could be placed in financial jeopardy. Financial jeopardy is defined as when the assistance payment to repair the damage would exceed 10 percent of the net income of the business.</li>
                             </ul><br/>
                             As a Landlord, you must to provide the following with your application:
                             <ul>
-                              <li>Completed [insurance template] (by insurance broker)*.</li>
-                              <li>Complete T1s for all owners of rented property</li>
-                              <li>Statement of real estate rentals (T776)</li>
-                              <li>Residential Tenancy Agreement</li>
+                              <li><a target="_blank" href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_homeowners_insurance_template.pdf">Insurance Template</a> completed by insurance broker*,</li>
+                              <li>complete T1 general income tax returns for all owners of rented property,</li>
+                              <li>T776 Statement of real estate rentals, and</li>
+                              <li>residential tenancy agreement</li>
                             </ul><br/>
                             *Note: Landlords must apply under the small business category but for insurance purposes, use the homeowner insurance template as commercial policies are not applicable to rental homes.
                             <br/><br/>
@@ -134,7 +135,7 @@
                           </div>
                         </div>
                       </mat-radio-group>
-                    </div> -->
+                    </div>
                     <!-- <div class="radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.FarmOwner">
                       <br/>
                       <mat-label class="sub-heading">What type of farm?<span style="color:red" >*</span></mat-label>
