--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -35,7 +35,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" *ngIf="isHomeowner === true || isResidentialTenant === true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Did you occupy the damaged property as your principal residence at the time of the event?<span style="color:red" >*</span>
@@ -54,6 +54,80 @@
               You must have occupied the property as your principal residence at the time of te event to be eligible for DFA. <br/><br/>
               You may call us to discuss further at 1-888-257-4777.<br/><br/>
             </div>
+          </div>
+        </div>
+
+        <div class="row" *ngIf="isSmallBusinessOwner == true">
+          <div class="col-md-12 bottomspace">
+            <p class="sub-heading" style="font-size: 15px">
+              Is your business managed by all owners on a day to day basis?<span style="color:red" >*</span>
+            </p>
+            <mat-radio-group
+              formControlName="businessManagedByAllOwnersOnDayToDayBasis"
+              class="primary-radio-group horizontal-radio-group"
+              required
+              aria-label="Select an option">
+              <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
+            </mat-radio-group><br/><br/>
+          </div>
+        </div>
+
+        <div class="row" *ngIf="isSmallBusinessOwner == true">
+          <div class="col-md-12 bottomspace">
+            <p class="sub-heading" style="font-size: 15px">
+              Are the gross revenues of the business more than $10,000 but less than $2
+              million in the year before the disaster?<span style="color:red" >*</span>
+            </p>
+            <mat-radio-group
+              formControlName="grossRevenues100002000000BeforeDisaster"
+              class="primary-radio-group horizontal-radio-group"
+              required
+              aria-label="Select an option">
+              <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
+            </mat-radio-group><br/><br/>
+          </div>
+        </div>
+
+        <div class="row" *ngIf="isSmallBusinessOwner == true">
+          <div class="col-md-12 bottomspace">
+            <p class="sub-heading" style="font-size: 15px">
+              Does the business employ less than 50 employees at any one time?<span style="color:red" >*</span>
+            </p>
+            <mat-radio-group
+              formControlName="employLessThan50EmployeesAtAnyOneTime"
+              class="primary-radio-group horizontal-radio-group"
+              required
+              aria-label="Select an option">
+              <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
+            </mat-radio-group><br/><br/>
+          </div>
+        </div>
+
+        <div class="row" *ngIf="isSmallBusinessOwner === true">
+          <div class="col-md-6 bottomspace">
+            <mat-form-field appearance="outline">
+              <mat-label>Provide the business legal name, if applicable.</mat-label>
+              <input formControlName="businessLegalName" matInput placeholder="Provide the business legal name, if applicable." [required]="damagedPropertyAddressForm.get('businessLegalName').value == 'true'" maxlength="100"/>
+              <mat-hint>Maximum length is 100 characters</mat-hint>
+              <mat-error
+                *ngIf="
+                  damagedPropertyAddressForm.get('businessLegalName').invalid &&
+                  damagedPropertyAddressForm.get('businessLegalName').hasError('required') &&
+                  damagedPropertyAddressForm.get('businessLegalName').touched
+                "
+              >
+                Business Legal Name is required</mat-error
+              >
+              <mat-error
+                *ngIf="
+                  damagedPropertyAddressForm.get('businessLegalName').invalid &&
+                  damagedPropertyAddressForm.get('businessLegalName').hasError('maxLength')
+                "
+              >
+                Maximum length is 100 characters</mat-error
+              >
+            </mat-form-field>
+            <br/><br/><br/>
           </div>
         </div>
 
@@ -105,7 +179,7 @@
           <br/><br/>
         </div>
 
-        <div class="row">
+        <div class="row" *ngIf="isHomeowner === true || isResidentialTenant === true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is your home a manufactured home?
