--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -32,7 +32,7 @@
           <app-dfa-attachment
             title="Insurance Template"
             description="Attach the insurance template completed by your insurance broker.<br/><a target='_blank' href='https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_homeowners_insurance_template.pdf'>Download a copy of the home owners, residential tenants, and landlord insurance template (PDF, 164 kb)</a>"
-            requiredFile="yes"
+            requiredDocumentType="InsuranceTemplate"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
             fileType="Insurance"
@@ -56,7 +56,7 @@
             title="Rental Agreement"
             description="Attach your rental agreement, lease, or <u>other documentation</u> to show that you are/were legally occupying the damaged property at the time of the event."
             *ngIf="rentalAgreementForm.hasError('noRentalAgreement')"
-            requiredFile="yes"
+            requiredDocumentType="TenancyAgreement"
             (showSideNote)="onToggleOtherDocuments()"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
@@ -90,10 +90,10 @@
             title="Identification"
             description=" Attach a copy of government issued identification such as Driver's License, Service Card, or BC ID."
             *ngIf="identificationForm.hasError('noIdentification')"
-            requiredFile="yes"
+            requiredDocumentType="Identification"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
-            fileType="Identification"
+            fileType="TenancyProof"
             excludeFileTypes="[]"
             (saveFileUpload)="saveRequiredForm($event)"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('identificationFileUpload')"
@@ -112,10 +112,9 @@
           <app-dfa-attachment
             title="OtherSuporting Documents (Optional)"
             description="If applicable, you may include additional documents related to your application."
-            requiredFile="no"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
-            excludeFileTypes="['Insurance', 'Cleanup', 'Damage photo', 'Identification', 'Tenancy proof']"
+            excludeFileTypes="['Cleanup', 'Damage photo']"
             (saveFileUpload)="saveSupportingFiles($event)"
             (cancelFileUpload)="cancelSupportingFiles()"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('supportingFilesFileUpload')"
@@ -130,10 +129,9 @@
           <app-dfa-attachment
             title="OtherSuporting Documents (Optional)"
             description="If applicable, you may include additional documents related to your application."
-            requiredFile="no"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
-            excludeFileTypes="['Insurance', 'Cleanup', 'Damage photo']"
+            excludeFileTypes="['Cleanup', 'Damage photo']"
             (saveFileUpload)="saveSupportingFiles($event)"
             (cancelFileUpload)="cancelSupportingFiles()"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('supportingFilesFileUpload')"
