file upload updates

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -39,9 +39,9 @@
             excludeFileTypes="[]"
             (saveFileUpload)="saveRequiredForm($event)"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('insuranceTemplateFileUpload')"
-            *ngIf="insuranceTemplateForm.hasError('noInsuranceTemplate')"
+            *ngIf="fileUploadForm.hasError('noInsuranceTemplate')"
           ></app-dfa-attachment>
-          <mat-card class="row" *ngIf="!insuranceTemplateForm.hasError('noInsuranceTemplate')">
+          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noInsuranceTemplate')">
             <p class="sub-heading" style="font-size: 15px">Required insurance template has been uploaded.</p>
           </mat-card>
         </div>
@@ -55,7 +55,7 @@
           <app-dfa-attachment
             title="Rental Agreement"
             description="Attach your rental agreement, lease, or <u>other documentation</u> to show that you are/were legally occupying the damaged property at the time of the event."
-            *ngIf="rentalAgreementForm.hasError('noRentalAgreement')"
+            *ngIf="fileUploadForm.hasError('noRentalAgreement')"
             requiredDocumentType="TenancyAgreement"
             (showSideNote)="onToggleOtherDocuments()"
             [allowedFileTypes]="allowedFileTypes"
@@ -66,7 +66,7 @@
             [fileUpload]="formCreationService.fileUploadsForm.value.get('rentalAgreementFileUpload')"
 
           ></app-dfa-attachment>
-          <mat-card class="row" *ngIf="!rentalAgreementForm.hasError('noRentalAgreement')">
+          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noRentalAgreement')">
             <p class="sub-heading" style="font-size: 15px">Required rental agreement form has been uploaded.</p>
           </mat-card>
         </div>
@@ -89,7 +89,7 @@
           <app-dfa-attachment
             title="Identification"
             description=" Attach a copy of government issued identification such as Driver's License, Service Card, or BC ID."
-            *ngIf="identificationForm.hasError('noIdentification')"
+            *ngIf="fileUploadForm.hasError('noIdentification')"
             requiredDocumentType="Identification"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
@@ -98,7 +98,7 @@
             (saveFileUpload)="saveRequiredForm($event)"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('identificationFileUpload')"
           ></app-dfa-attachment>
-          <mat-card class="row" *ngIf="!identificationForm.hasError('noIdentification')">
+          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noIdentification')">
             <p class="sub-heading" style="font-size: 15px">Required identification form has been uploaded.</p>
           </mat-card>
         </div>
@@ -215,13 +215,13 @@
 
     </table>
 
-    <mat-error *ngIf="insuranceTemplateForm.hasError('noInsuranceTemplate')">
+    <mat-error *ngIf="fileUploadForm.hasError('noInsuranceTemplate')">
       <br/>Insurance template is required.
     </mat-error>
-    <mat-error *ngIf="rentalAgreementForm?.hasError('noRentalAgreement') && isResidentialTenant">
+    <mat-error *ngIf="fileUploadForm?.hasError('noRentalAgreement') && isResidentialTenant">
       <br/>Proof of tenancy is required.
     </mat-error>
-    <mat-error *ngIf="identificationForm?.hasError('noIdentification') && isResidentialTenant">
+    <mat-error *ngIf="fileUploadForm?.hasError('noIdentification') && isResidentialTenant">
       <br/>Identification is required.
     </mat-error>
 
