--- a/dfa/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dfa-attachment/dfa-attachment.component.html
@@ -93,6 +93,7 @@
               >
                 Cancel
               </button>
+              <button (click)="showForm()">Show Form</button>
             </div>
             <div class="col-md-6" *ngIf="fileUpload.valid">
               <button
