--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
@@ -269,6 +269,7 @@
                   mat-icon-button
                   aria-label="Remove"
                   (click)="confirmDeleteDamagePhotoRow(element)"
+                  *ngIf="dfaApplicationMainDataService.getViewOrEdit() !== 'view'"
                 >
                   <img src="/assets/images/delete.svg" height="35" width="35" />
                   <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
