--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card-align" [ngStyle]="{'pointer-events': dfaApplicationMainDataService.getViewOrEdit() === 'view' ? 'none' : ''}" style="border:none;" [class.mat-elevation-z0]="true">
+<mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
     <ng-container>
@@ -189,7 +189,7 @@
         </td>
       </ng-container>
 
-      <!-- Delete & Edit Icons Column -->
+      <!-- Delete Icon Column -->
       <ng-container matColumnDef="icons" style="width:25%">
         <th mat-header-cell *matHeaderCellDef>
           &nbsp;
@@ -200,6 +200,7 @@
             mat-icon-button
             aria-label="Remove"
             (click)="confirmDeleteDocumentSummaryRow(element)"
+            *ngIf="dfaApplicationMainDataService.getViewOrEdit() !== 'view'"
           >
             <img src="/assets/images/delete.svg" height="35" width="35" />
             <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
