--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -55,8 +55,8 @@
           </mat-card>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
 
     <ng-container *ngIf="isSmallBusinessOwner && (isGeneral || isCorporate)"> <!-- Insurance Template for Small Business: General, Corporate -->
       <div class="row">
@@ -78,8 +78,8 @@
           </mat-card>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
 
     <ng-container *ngIf="isResidentialTenant"> <!-- Rental Agreement for Residential Tenant-->
       <div class="row">
@@ -112,8 +112,8 @@
           </ul>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
 
     <ng-container *ngIf="isResidentialTenant"> <!-- Identification for Residential Tenant -->
       <div class="row">
@@ -136,16 +136,15 @@
         </div>
       </div>
     </ng-container>
-    <br/><br/>
 
-    <ng-container *ngIf="isSmallBusinessOwner && isGeneral"> <!-- T1 Income tax return for Small Business Owner: General -->
+    <ng-container *ngIf="isSmallBusinessOwner && (isGeneral || isLandlord)"> <!-- T1 Income tax return for Small Business Owner: General -->
       <div class="row">
         <div class="col-md-8">
           <app-dfa-attachment
             title="Income Tax Return"
             description="Attach your completed T1 general income tax return with supporting schedules for all owners."
-            *ngIf="fileUploadForm.hasError('noT1IncomeTaxReturn')"
-            requiredDocumentType="T1IncomeTaxReturn"
+            *ngIf="fileUploadForm.hasError('noT1GeneralIncomeTaxReturn')"
+            requiredDocumentType="T1GeneralIncomeTaxReturn"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
             fileType="Financial"
@@ -153,13 +152,13 @@
             (saveFileUpload)="saveRequiredForm($event)"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('T1IncomeTaxReturnFileUpload')"
           ></app-dfa-attachment>
-          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noT1IncomeTaxReturn')">
+          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noT1GeneralIncomeTaxReturn')">
             <p class="sub-heading" style="font-size: 15px">Required T1 Income Tax Return has been uploaded.</p>
           </mat-card>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
 
     <ng-container *ngIf="isSmallBusinessOwner && isCorporate"> <!-- T2 Income tax return for Small Business Owner: Corporate -->
       <div class="row">
@@ -167,8 +166,8 @@
           <app-dfa-attachment
             title="Income Tax Return"
             description="Attach your completed T2 corporate income tax return for the company."
-            *ngIf="fileUploadForm.hasError('noT2IncomeTaxReturn')"
-            requiredDocumentType="T2IncomeTaxReturn"
+            *ngIf="fileUploadForm.hasError('noT2CorporateIncomeTaxReturn')"
+            requiredDocumentType="T2CorporateIncomeTaxReturn"
             [allowedFileTypes]="allowedFileTypes"
             allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
             fileType="Financial"
@@ -176,13 +175,13 @@
             (saveFileUpload)="saveRequiredForm($event)"
             [fileUpload]="formCreationService.fileUploadsForm.value.get('T2IncomeTaxReturnFileUpload')"
           ></app-dfa-attachment>
-          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noT2IncomeTaxReturn')">
+          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noT2CorporateIncomeTaxReturn')">
             <p class="sub-heading" style="font-size: 15px">Required T2 Income Tax Return has been uploaded.</p>
           </mat-card>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
 
     <ng-container *ngIf="isSmallBusinessOwner && isCorporate"> <!-- Proof of ownership for Small Business Owner: Corporate -->
       <div class="row">
@@ -204,8 +203,31 @@
           </mat-card>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
+
+    <ng-container *ngIf="isSmallBusinessOwner && isLandlord"> <!-- T776 for Small Business Owner: Landlord -->
+      <div class="row">
+        <div class="col-md-8">
+          <app-dfa-attachment
+            title="T776 Statement of Real Estate Rentals"
+            description="Attach the T776 Statement of real estate rentals."
+            *ngIf="fileUploadForm.hasError('noT776')"
+            requiredDocumentType="T776"
+            [allowedFileTypes]="allowedFileTypes"
+            allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
+            fileType="Financial"
+            excludeFileTypes="[]"
+            (saveFileUpload)="saveRequiredForm($event)"
+            [fileUpload]="formCreationService.fileUploadsForm.value.get('T776FileUpload')"
+          ></app-dfa-attachment>
+          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noT776')">
+            <p class="sub-heading" style="font-size: 15px">Required T776 has been uploaded.</p>
+          </mat-card>
+        </div>
+      </div>
+      <br/><br/>
+    </ng-container>
 
     <ng-container *ngIf="isSmallBusinessOwner && (isGeneral || isCorporate)"> <!-- Financial Statements for Small Business Owner: General, Corporate -->
       <div class="row">
@@ -227,8 +249,8 @@
           </mat-card>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
 
     <ng-container *ngIf="isSmallBusinessOwner && (isGeneral || isCorporate)"> <!-- Lease Agreement for Small Business Owner: General, Corporate -->
       <div class="row">
@@ -250,8 +272,31 @@
           </mat-card>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
-    <br/><br/>
+
+    <ng-container *ngIf="isSmallBusinessOwner && isLandlord"> <!-- Residential Tenancy Agreement for Small Business Owner: Landlord -->
+      <div class="row">
+        <div class="col-md-8">
+          <app-dfa-attachment
+            title="Residential Tenancy Agreement"
+            description="Attach the residential tenancy agreement."
+            *ngIf="fileUploadForm.hasError('noResidentialTenancyAgreement')"
+            requiredDocumentType="ResidentialTenancyAgreement"
+            [allowedFileTypes]="allowedFileTypes"
+            allowedFileExtensionsList=".pdf, .doc, .docx, .png, .jpeg, .jpg, .ppt, .pptx, .xls, .xlsx"
+            fileType="TenancyProof"
+            excludeFileTypes="[]"
+            (saveFileUpload)="saveRequiredForm($event)"
+            [fileUpload]="formCreationService.fileUploadsForm.value.get('tenancyAgreementFileUpload')"
+          ></app-dfa-attachment>
+          <mat-card class="row" *ngIf="!fileUploadForm.hasError('noResidentialTenancyAgreement')">
+            <p class="sub-heading" style="font-size: 15px">Required residential tenancy agreement has been uploaded.</p>
+          </mat-card>
+        </div>
+      </div>
+      <br/><br/>
+    </ng-container>
 
     <ng-container> <!-- Supporting Documents -->
       <div class="row">
@@ -268,6 +313,7 @@
           ></app-dfa-attachment>
         </div>
       </div>
+      <br/><br/>
     </ng-container>
 
     <div *ngIf="documentSummaryDataSource.data.length > 0">
@@ -371,9 +417,6 @@
     </mat-error>
     <mat-error *ngIf="fileUploadForm?.hasError('noResidentialTenancyAgreement')">
       <br/>A residential tenancy agreement is required.
-    </mat-error>
-    <mat-error *ngIf="fileUploadForm?.hasError('noTenancyAgreement')">
-      <br/>Tenancy agreement is required if applicable.
     </mat-error>
   </mat-card-content>
 </mat-card>
