--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -422,7 +422,13 @@
                   (formCreationService.appTypeInsuranceForm$ | async)?.value
                     ?.applicantOption
                 }}</span
-              ></p>
+              >
+              <span *ngIf="isSmallBusinessOwner"
+              > -- {{
+                (formCreationService.appTypeInsuranceForm$ | async)?.value
+                ?.smallBusinessOption
+              }}</span>
+            </p>
           </div>
         </div>
         <div class="row info-detail">
@@ -533,7 +539,55 @@
             </p>
           </div>
         </div>
-        <div class="row info-detail">
+        <div class="row info-detail" *ngIf="isSmallBusinessOwner">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.businessManagedByAllOwnersOnDayToDayBasis}">Business managed by all owners day to day:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.businessManagedByAllOwnersOnDayToDayBasis}">{{
+              (formCreationService.damagedPropertyAddressForm$ | async)?.value
+                .businessManagedByAllOwnersOnDayToDayBasis == 'true'
+                ? 'Yes'
+                : ((formCreationService.damagedPropertyAddressForm$ | async)?.value
+                .businessManagedByAllOwnersOnDayToDayBasis == 'false' ? 'No' : 'Make a selection')
+            }}</span>
+          </div>
+        </div>
+        <div class="row info-detail" *ngIf="isSmallBusinessOwner">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.grossRevenues100002000000BeforeDisaster}">Gross revenues more than $10,000 but less than $2 million:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.grossRevenues100002000000BeforeDisaster}">{{
+              (formCreationService.damagedPropertyAddressForm$ | async)?.value
+                .grossRevenues100002000000BeforeDisaster == 'true'
+                ? 'Yes'
+                : ((formCreationService.damagedPropertyAddressForm$ | async)?.value
+                .grossRevenues100002000000BeforeDisaster == 'false' ? 'No' : 'Make a selection')
+            }}</span>
+          </div>
+        </div>
+        <div class="row info-detail" *ngIf="isSmallBusinessOwner">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.employLessThan50EmployeesAtAnyOneTime}">Employ less than 50 employees:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.employLessThan50EmployeesAtAnyOneTime}">{{
+              (formCreationService.damagedPropertyAddressForm$ | async)?.value
+                .employLessThan50EmployeesAtAnyOneTime == 'true'
+                ? 'Yes'
+                : ((formCreationService.damagedPropertyAddressForm$ | async)?.value
+                .employLessThan50EmployeesAtAnyOneTime == 'false' ? 'No' : 'Make a selection')
+            }}</span>
+          </div>
+        </div>
+        <div class="row info-detail" *ngIf="isSmallBusinessOwner">
+          <div class="col-md-3"><span [ngClass]="{'missing-info': (formCreationService.damagedPropertyAddressForm$ | async)?.controls.businessLegalName.invalid}">Business legal name:</span></div>
+          <div class="col-md-3">
+            <span [ngClass]="{'missing-info': (formCreationService.damagedPropertyAddressForm$ | async)?.controls?.businessLegalName.invalid}">
+              {{
+                (formCreationService.damagedPropertyAddressForm$ | async)?.value
+                  .businessLegalName ? (formCreationService.damagedPropertyAddressForm$ | async)?.value
+                  .businessLegalName : "Enter required information"
+              }}
+            </span>
+          </div>
+        </div>
+        <div class="row info-detail" *ngIf="isHomeowner || isResidentialTenant">
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.occupyAsPrimaryResidence}">Occupied as Primary Residence during event:</span></div>
           <div class="col-md-3">
             <span [ngClass]="{'missing-info': !(formCreationService.damagedPropertyAddressForm$ | async)?.value?.occupyAsPrimaryResidence}">{{
@@ -569,7 +623,7 @@
             </span>
           </div>
         </div>
-        <div class="row info-detail">
+        <div class="row info-detail" *ngIf="isHomeowner || isResidentialTenant">
           <div class="col-md-3">Manufactured Home:</div>
           <div class="col-md-3">
             {{
@@ -736,7 +790,7 @@
             }}</span>
           </div>
         </div>
-        <div class="row info-detail">
+        <div class="row info-detail" *ngIf="isResidentialTenant || isHomeowner">
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(((formCreationService.propertyDamageForm$ | async)?.value.lossesExceed1000 == 'true') || ((formCreationService.propertyDamageForm$ | async)?.value.lossesExceed1000 == 'false'))}">Losses Total More Than $1000?:</span></div>
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(((formCreationService.propertyDamageForm$ | async)?.value.lossesExceed1000 == 'true') || ((formCreationService.propertyDamageForm$ | async)?.value.lossesExceed1000 == 'false'))}">
             {{
@@ -748,7 +802,7 @@
             }}
           </span></div>
         </div>
-        <div class="row info-detail">
+        <div class="row info-detail" *ngIf="isResidentialTenant || isHomeowner">
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(((formCreationService.propertyDamageForm$ | async)?.value.wereYouEvacuated == 'true') || ((formCreationService.propertyDamageForm$ | async)?.value.wereYouEvacuated == 'false'))}">Were You Evacuated?:</span></div>
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(((formCreationService.propertyDamageForm$ | async)?.value.wereYouEvacuated == 'true') || ((formCreationService.propertyDamageForm$ | async)?.value.wereYouEvacuated == 'false'))}">
             {{
@@ -762,7 +816,7 @@
             }}
           </span></div>
         </div>
-        <div class="row info-detail">
+        <div class="row info-detail" *ngIf="isResidentialTenant || isHomeowner">
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(((formCreationService.propertyDamageForm$ | async)?.value.residingInResidence == 'true') || ((formCreationService.propertyDamageForm$ | async)?.value.residingInResidence == 'false'))}">Residing In Residence?:</span></div>
           <div class="col-md-3"><span [ngClass]="{'missing-info': !(((formCreationService.propertyDamageForm$ | async)?.value.residingInResidence == 'true') || ((formCreationService.propertyDamageForm$ | async)?.value.residingInResidence == 'false'))}">
             {{
@@ -796,7 +850,7 @@
           </div>
         </div>
         <hr />
-        <div class="row info-detail" *ngIf="(formCreationService.fullTimeOccupantsForm$ | async)?.value?.fullTimeOccupants?.length > 0">
+        <div class="row info-detail" *ngIf="(isHomeowner || isResidentialTenant) && (formCreationService.fullTimeOccupantsForm$ | async)?.value?.fullTimeOccupants?.length > 0">
           <b>Full Time Occupants</b>
           <table mat-table [dataSource]="fullTimeOccupantsDataSource">
             <!-- Name Column -->
@@ -827,7 +881,7 @@
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.fullTimeOccupantsForm$ | async)?.value?.fullTimeOccupants?.length == 0">
+        <div class="row info-detail" *ngIf="(isHomeowner || isResidentialTenant) && (formCreationService.fullTimeOccupantsForm$ | async)?.value?.fullTimeOccupants?.length == 0">
           <span style="color:red">At least one full time occupant is required.</span>
         </div>
         <div class="row info-detail" *ngIf="(formCreationService.secondaryApplicantsForm$ | async)?.value?.secondaryApplicants?.length > 0">
@@ -1222,11 +1276,29 @@
         <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noInsuranceTemplate')">
           <span style="color:red">Insurance template is required.</span>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noRentalAgreement') && isResidentialTenant">
-          <span style="color:red">Rental Agreement is required.</span>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noRentalAgreement')">
+          <span style="color:red">Proof of tenancy is required.</span>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noIdentification') && isResidentialTenant">
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noIdentification')">
           <span style="color:red">Identification is required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noT1GeneralIncomeTaxReturn')">
+          <span style="color:red">A T1 general income tax return is required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noFinancialStatements')">
+          <span style="color:red">Financial statements required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noT2CorporateIncomeTaxReturn')">
+          <span style="color:red">A T2 corporate income tax return is required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noProofOfOwnership')">
+          <span style="color:red">Proof of ownership is required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noT776')">
+          <span style="color:red">A T776 statement of real estate rentals is required.</span>
+        </div>
+        <div class="row info-detail" *ngIf="(formCreationService.fileUploadsForm$ | async)?.hasError('noResidentialTenancyAgreement')">
+          <span style="color:red">A residential tenancy agreement is required.</span>
         </div>
       </mat-card-content>
 
